[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/objects/challengemenu5/Player.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -20.0
margin_top = -19.0
margin_right = 20.0
margin_bottom = 21.0

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="UpLabel" type="RichTextLabel" parent="."]
margin_left = -56.0
margin_top = -51.0
margin_right = 54.0
margin_bottom = -30.0
text = "1234567890123"

[node name="DownLabel" type="RichTextLabel" parent="."]
margin_left = -54.0
margin_top = 42.0
margin_right = 56.0
margin_bottom = 63.0
text = "1234567890123"

[node name="LeftLabel" type="RichTextLabel" parent="."]
margin_left = -155.0
margin_top = -7.0
margin_right = -45.0
margin_bottom = 14.0
text = "1234567890123"

[node name="RightLabel" type="RichTextLabel" parent="."]
margin_left = 52.0
margin_top = -9.0
margin_right = 162.0
margin_bottom = 12.0
text = "1234567890123"
